x11client: Use QTimer::singleShot in m_edgeGeometryTrackingConnection

frameGeometryChanged will be emitted before and after the panel is
moved to the edge, but we don't want to call reserve(...) before the
panel is moved.

BUG: 448420